# browser-study

./: .gitignore  README.md  connection.py  main.py  pyproject.toml  pytest.ini  renderer.py  server.py  url.py
.github/workflows/: ci.yml
demo/: chapter1_entities.html  chapter2_rtl.html  chapter2_rtl.txt  chapter3_pre_tag.html  chapter3_text_formatting.html  chapter4_comment.html  chapter4_mismatched_tags.html  chapter4_paragraph.html
gorushi/: browser.py  command.py  connection.py  constants.py  font_measure_cache.py  layout.py  node.py  parser.py  renderer.py  state_machine.py  url.py
tests/: test_connection.py  test_example.py  test_html_tokenizer_state_machine.py  test_parser.py  test_performance.py  test_renderer.py  test_url.py
