[project]
name = "browser-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-watch",
]

[dependency-groups]
dev = [
    "fastapi>=0.120.0",
    "pytest>=8.4.2",
    "pytest-watch>=4.2.0",
    "uvicorn>=0.38.0",
]
